--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -28,5 +28,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "src/utils/fetchUtil.ts", "../Backend/assets"]
 }
